# openrssgate

./: .gitignore  LICENSE  README.md
.github/workflows/: publish-openrssgate-homebrew.yml  release-openrssgate-cli.yml
backend/: .env.example  .env.production.example  Dockerfile  README.md  alembic.ini  railway-api.json  railway-worker.json  requirements.txt
backend/alembic/: README  env.py
backend/app/: main.py  (+1 more)
cli/: EXTERNAL_SETUP.md  GITHUB_ACTIONS.md  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.py
cli/homebrew/: README.md  prepare_formula_release.py  publish_formula.py  render_formula.py
cli/homebrew/Formula/: openrssgate.rb  openrssgate.rb.template
cli/openrssgate/: client.py  config.py  errors.py  main.py  output.py
cli/openrssgate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/openrssgate/commands/: feeds.py  list.py  register.py  stats.py  validate.py
cli/rssgate/: client.py  config.py  main.py
cli/rssgate/commands/: feeds.py  list.py
cli/tests/: test_client.py  test_feeds_command.py  test_list_command.py
docs/: 20260313_source_metadata_refactor.sql  20260314_opml_source_import.sql  20260315_add_ai_review_columns.sql  20260318_add_feed_entry_fields.sql  20260318_neon_policy_only.sql  20260318_neon_rls.sql  20260318_neon_roles_grants_rls.sql  admin-web-plan.md  claude-desktop-local-mcp.md  claude-desktop-mcp.md  deployment-guide.md  feedly-744ba8b1-3a15-4b25-a356-f4529871a961-2026-02-18.opml  generate_opml_sources_sql.py  openrssgate-cli-plan.md  post-deploy-checklist.md  rss-gateway-plan.md  subscriptions.opml
frontend/: .env.example  .env.production.example  README.md  drizzle.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
(+97 files in other folders)
