[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrssgate"
version = "0.1.0"
description = "Read-only CLI for querying OpenRSSGate sources and feeds."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx==0.28.1",
  "typer==0.16.1",
]

[project.scripts]
openrssgate = "rssgate.main:_run"
rssgate = "rssgate.main:_run"

[tool.setuptools.packages.find]
include = ["rssgate*"]
