[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrssgate"
version = "0.1.2"
description = "Read-only CLI for querying OpenRSSGate sources and feeds."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "OpenRSSGate" }
]
keywords = ["rss", "cli", "feeds", "mcp", "openrssgate"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx==0.28.1",
  "typer==0.16.1",
]

[project.urls]
Homepage = "https://github.com/windbug99/openrssgate"
Repository = "https://github.com/windbug99/openrssgate"
Issues = "https://github.com/windbug99/openrssgate/issues"

[project.scripts]
org = "openrssgate.main:_run"
openrssgate = "openrssgate.main:_run"

[tool.setuptools.packages.find]
include = ["openrssgate*"]
